--- a/QuickPollLibrary/QuickPollLibrary.csproj
+++ b/QuickPollLibrary/QuickPollLibrary.csproj
@@ -6,4 +6,11 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore.SignalR.Core" Version="1.1.0" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
+		<PackageReference Include="MongoDB.Bson" Version="2.18.0" />
+		<PackageReference Include="MongoDB.Driver" Version="2.18.0" />
+	</ItemGroup>
+
 </Project>
