--- a/QuickPollUI/appsettings.json
+++ b/QuickPollUI/appsettings.json
@@ -14,21 +14,21 @@
       {
         "Name": "File",
         "Args": {
-          "path": "C:\\Users\\wamcr\\source\\Logs\\log.txt",
+          "path": "C:\\Users\\wamcr\\source\\QuickPollLogs\\log.txt",
           "outputTemplate": "{Timestamp:G} {Message}{NewLine:1}{Exception:1}"
         }
       },
       {
         "Name": "File",
         "Args": {
-          "path": "C:\\Users\\wamcr\\source\\Logs\\log.json",
+          "path": "C:\\Users\\wamcr\\source\\QuickPollLogs\\log.json",
           "formatter": "Serilog.Formatting.Json.JsonFormatter, Serilog"
         }
       },
       {
         "Name": "Seq",
         "Args": {
-          "serverUrl": "http://localhost:8082"
+          "serverUrl": "http://localhost:8089"
         }
       }
     ]
