--- a/QuickPollUI/QuickPollUI.csproj
+++ b/QuickPollUI/QuickPollUI.csproj
@@ -29,4 +29,8 @@
     <ProjectReference Include="..\QuickPollLibrary\QuickPollLibrary.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\" />
+  </ItemGroup>
+
 </Project>
