--- a/QuickPollLibrary/QuickPollLibrary.csproj
+++ b/QuickPollLibrary/QuickPollLibrary.csproj
@@ -9,6 +9,7 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Components.DataAnnotations.Validation" Version="3.2.0-rc1.20223.4" />
 		<PackageReference Include="Microsoft.AspNetCore.SignalR.Core" Version="1.1.0" />
+		<PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="7.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
 		<PackageReference Include="MongoDB.Bson" Version="2.18.0" />
 		<PackageReference Include="MongoDB.Driver" Version="2.18.0" />
